--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,24 @@
 }
 
 button {
-     border-style: double;
-    border-color: violet;
-    border-width: 5px; 
-    text-align: center;
+    column-count: 4;
+    columns: auto;
     justify-content: center;
-
+    border-style: double;
+    border-color: rgb(171, 107, 171);
+    background-color: rgb(212, 117, 184);
+    border-width: 5px; 
+    border-radius: 10%;
+    text-align: center;
+    margin-left: 200px;
+    padding: 10px;
 }
 
 div {
-    padding-top: 20px;
-    font-size: large;
+    margin: 100px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    font-size: 20px;
     font-family: Georgia;
     font-weight: bold;
     text-align: center;
