--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,14 @@
 
 button {
     column-count: 4;
-    columns: auto;
-    justify-content: center;
-    border-style: double;
-    border-color: rgb(171, 107, 171);
+    columns: center;
+    float: center;
+    /* border-style: solid; */
     background-color: rgb(212, 117, 184);
     border-width: 5px; 
     border-radius: 10%;
     text-align: center;
-    margin-left: 200px;
-    padding: 10px;
+    margin-left: 300px
 }
 
 div {
