--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,10 @@
 
 }
 
-button {
+.button {
     /* I need to find a way to stack all the buttons into a row. */
-    display: table-column-group;
-    columns: center;
-    /* columns: center;
-    float: center; */
-    /* border-style: solid; */
+    display: block;
+    float: center;
     font-weight: bold;
     font-family: "Cambria";
     color: black;
@@ -19,7 +16,7 @@ button {
     border-width: 5px; 
     border-radius: 10%;
     text-align: center;
-    /* margin-left: 50px; */
+    margin-left: 500px; 
 }
 
 div {
