--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 }
 
 .button {
-    /* I need to find a way to stack all the buttons into a row. */
-    display: block;
+    padding: 10px;
+     display: block;
     float: center;
     font-weight: bold;
     font-family: "Cambria";
@@ -16,7 +16,7 @@
     border-width: 5px; 
     border-radius: 10%;
     text-align: center;
-    margin-left: 500px; 
+    margin-left: 510px;
 }
 
 div {
