--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,21 @@
     margin-left: 510px;
 }
 
+#button {
+    padding: 10px;
+    display: block;
+   float: center;
+   font-weight: bold;
+   font-family: "Cambria";
+   color: black;
+   border-color: rgba(189, 52, 148, 0.658);
+   background-color: rgba(189, 52, 148, 0.658);
+   border-width: 5px; 
+   border-radius: 10%;
+   text-align: center;
+   margin-left: 510px;
+}
+
 div {
     margin: 100px;
     font-size: 20px;
