--- a/styles.css
+++ b/styles.css
@@ -19,19 +19,8 @@
     margin-left: 585px;
 }
 
-#button {
-    padding: 10px;
-    display: block;
-   float: center;
-   font-weight: bold;
-   font-family: "Cambria";
-   color: black;
-   border-color: rgba(189, 52, 148, 0.658);
-   background-color: rgba(189, 52, 148, 0.658);
-   border-width: 5px; 
-   border-radius: 10%;
-   text-align: center;
-   margin-left: 510px;
+.timer {
+    color:rgba(189, 52, 148, 0.658);
 }
 
 div {
